@@ -109,8 +109,6 @@ public class CacheServerLauncher  {
   protected String maxHeapSize;
   protected String initialHeapSize;
   protected String offHeapSize;
-  protected String memorySize;
-  protected String maxPermGenSize;
   protected boolean useThriftServerDefault =
       ClientSharedUtils.isThriftDefault();
 
@@ -360,9 +358,6 @@ public class CacheServerLauncher  {
       "eviction-off-heap-percentage";
   protected static final String LOCK_MEMORY = "lock-memory";
 
-  protected static final String MAX_PERM_SIZE = "-XX:MaxPermSize";
-  protected static final String MAX_PERM_DEFAULT = "=128m";
-  
   protected final File processDirOption(final Map<String, Object> options, final String dirValue) throws FileNotFoundException {
     final File inputWorkingDirectory = new File(dirValue);
 
@@ -442,8 +437,6 @@ public class CacheServerLauncher  {
           this.maxHeapSize = vmArg.substring(4);
         } else if (vmArg.startsWith("-Xms")) {
           this.initialHeapSize = vmArg.substring(4);
-        } else if (vmArg.startsWith(MAX_PERM_SIZE)) {
-          this.maxPermGenSize = vmArg;
         } else if (vmArg.startsWith(thriftArg = ("-D"
             + SystemProperties.getServerInstance().getSystemPropertyNamePrefix()
             + ClientSharedUtils.USE_THRIFT_AS_DEFAULT_PROP))) {
@@ -747,7 +740,7 @@ public class CacheServerLauncher  {
   /**
    * Sets the status of the cache server to be {@link #RUNNING}.
    */
-  public void running(final InternalDistributedSystem system) {
+  public void running(final InternalDistributedSystem system, boolean endWaiting) {
     Status stat = this.status;
     if (stat == null) {
       stat = this.status = createStatus(this.baseName, RUNNING, getProcessId());
@@ -755,6 +748,9 @@ public class CacheServerLauncher  {
     else {
       if (stat.state == WAITING) {
         stat.dsMsg = null;
+        if (endWaiting) {
+          stat.state = RUNNING;
+        }
       } else {
         stat.state = RUNNING;
       }
@@ -909,7 +905,7 @@ public class CacheServerLauncher  {
 
     startAdditionalServices(cache, options, props);
 
-    this.running(system);
+    this.running(system, false);
 
     clearLogListener();
 
